Closed Bug 1340724 Opened 9 years ago Closed 9 years ago

logging error in nsSmtpProtocol::AuthLoginStep1

Categories

(MailNews Core :: Networking: SMTP, defect)

defect
Not set
normal

Tracking

(thunderbird52+ fixed, thunderbird53 fixed, thunderbird54 fixed)

RESOLVED FIXED
Thunderbird 54.0
Tracking Status
thunderbird52 + fixed
thunderbird53 --- fixed
thunderbird54 --- fixed

People

(Reporter: dkg, Assigned: aceman)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:51.0) Gecko/20100101 Firefox/51.0 Build ID: 20170205065236 Steps to reproduce: launch thunderbird with: NSPR_LOG_MODULES=smtp:5 NSPR_LOG_FILE=/tmp/thunderbird.log thunderbird compose and send a message. Actual results: the log /tmp/thunderbird.log will contain something like: -321738944[7fb1eb8a2380]: SMTP AuthLoginStep1() for testuser@example.com@<90><F6>^K<EA><B1>^? that trailing garbage is bad! it should represent a string-like version Expected results: https://dxr.mozilla.org/comm-central/source/mailnews/compose/src/nsSmtpProtocol.cpp#1460 shows that what should be a string pointer is being retrieved from an nsCOMPtr<nsISmtpServer>.get() function, which is just a nsISmtpServer* -- i think it should be calling GetHostname or GetDescription or something comparable instead of handing a raw pointer to the logging function.
Thank you for the report, happens both with 45.7.1 and latest Trunk (54.0a1).
Status: UNCONFIRMED → NEW
Component: Untriaged → Networking: SMTP
Ever confirmed: true
Product: Thunderbird → MailNews Core
Version: 45 Branch → Trunk
Yes, that print is bad.
Assignee: nobody → acelists
Status: NEW → ASSIGNED
OS: Unspecified → All
Hardware: Unspecified → All
Thanks. Synchronicity. We discovered this ourselves today, see bug 1340755. Current try run here: https://hg.mozilla.org/try-comm-central/rev/9ea6e1d79df318564e0b2b7272ccc80a627f68f8#l3.42 We'll get this fixed in TB 52 beta 4 and the next TB 52 ESR due in March 2017.
Aceman, we just need a patch for C-A and C-B, C-C will be fixed in bug 1340755.
Attached patch patchSplinter Review
Can you try this?
Attachment #8838880 - Flags: review?(jorgk)
Attachment #8838880 - Flags: feedback?(dkg)
Comment on attachment 8838880 [details] [diff] [review] patch Yep, but only for C-A and C-B. Or do you want to separate this out from the other patch? You decide, I'll approve anything ;-)
Attachment #8838880 - Flags: review?(jorgk) → review+
Yes, let's split this out of bug 1340755 as this is a functional change.
Fine, just land them together later then.
Comment on attachment 8838880 [details] [diff] [review] patch [Triage Comment]
Attachment #8838880 - Flags: approval-comm-beta+
Attachment #8838880 - Flags: approval-comm-aurora+
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 54.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: