Bug 1340724 - fix SMTP server name output in SMTP logging. r=jorgk